--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -4874,8 +4874,9 @@
   title     = {Mapping Social Networks in La Princesse de Clèves: The `Commerce' of Lafayette's Court},
   journal   = {French Studies},
   year      = {2021},
-  volume    = {in press},
-  pages     = {knab036},
+  volume    = {75},
+  number    = {2},
+  pages     = {184-204},
   doi       = {10.1093/fs/knab036},
   owner     = {Vincent},
   timestamp = {2021.06.21},
@@ -6704,6 +6705,16 @@
   owner     = {Vincent},
   timestamp = {2020.07.22},
   url       = {https://www.degruyter.com/view/title/37578},
+}
+
+@Book{Brenner2007,
+  title     = {Understanding Manga and Anime},
+  publisher = {Greenwood Publishing},
+  year      = {2007},
+  author    = {Brenner, R. E.},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+  url       = {https://books.google.fr/books/?id=VWUsAAAAYAAJ},
 }
 
 @Article{Brewer2000,
@@ -10227,6 +10238,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2020.11.30},
 }
 
+@Book{Cohen2013a,
+  title     = {Statistical Power Analysis for the Behavioral Sciences},
+  publisher = {Routledge},
+  year      = {2013},
+  author    = {Cohen, J.},
+  doi       = {10.4324/9780203771587},
+  owner     = {Vincent},
+  timestamp = {2023.03.18},
+}
+
 @Article{CohenSteiner2008,
   author    = {Cohen-Steiner, D. and Edelsbrunner, H. and Harer, J.},
   title     = {Extending Persistence Using Poincaré and Lefschetz Duality},
@@ -11220,6 +11241,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2023.01.09},
 }
 
+@Article{Cureu2013,
+  author    = {Curşeu, P. L. and Pluut, H.},
+  title     = {Student groups as learning entities: The effect of group diversity and teamwork quality on groups' cognitive complexity},
+  journal   = {Studies in Higher Education},
+  year      = {2013},
+  volume    = {38},
+  number    = {1},
+  pages     = {87-103},
+  doi       = {10.1080/03075079.2011.565122},
+  owner     = {Vincent},
+  timestamp = {2023.03.18},
+}
+
 @Book{Curley2009,
   title     = {Samuel Johnson, the Ossian Fraud, and the Celtic Revival in Great Britain and Ireland},
   publisher = {Cambridge University Press},
@@ -12093,6 +12127,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1007/s00530-013-0306-4},
   owner     = {Vincent},
   timestamp = {2019.03.24},
+}
+
+@Article{DellEra2010,
+  author    = {Dell'Era, C. and Verganti, R.},
+  title     = {Collaborative Strategies in Design-intensive Industries: Knowledge Diversity and Innovation},
+  journal   = {Long Range Planning},
+  year      = {2010},
+  volume    = {43},
+  number    = {1},
+  pages     = {123-141},
+  doi       = {10.1016/j.lrp.2009.10.006},
+  owner     = {Vincent},
+  timestamp = {2023.03.18},
 }
 
 @Article{Delmestri2005,
@@ -14600,7 +14647,7 @@ arXiv: https://arxiv.org/abs/1709.07604},
 @InProceedings{Elson2010,
   author    = {Elson, D. K. and Dames, N. and McKeown, K. R.},
   title     = {Extracting social networks from literary fiction},
-  booktitle = {48th annual meeting of the association for computational linguistics},
+  booktitle = {48th Annual Meeting of the Association for Computational Linguistics},
   year      = {2010},
   pages     = {138-147},
   owner     = {Vincent},
@@ -16376,6 +16423,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2020.07.25},
 }
 
+@Article{FonsecadosReis2020,
+  author    = {Fonseca dos Reis, E. and Li, A. and Masuda, N.},
+  title     = {Generative models of simultaneously heavy-tailed distributions of interevent times on nodes and edges},
+  journal   = {Physical Review E},
+  year      = {2020},
+  volume    = {102},
+  number    = {5},
+  pages     = {052303},
+  doi       = {10.1103/physreve.102.052303},
+  owner     = {Vincent},
+  timestamp = {2023.03.18},
+}
+
 @Article{FonsecaVieira2020,
   author        = {da Fonseca Vieira, V. and Ribeiro Xavier, C. and Gonçalves Evsukoff, A.},
   title         = {A comparative study of overlapping community detection methods from the perspective of the structural properties},
@@ -17992,8 +18052,9 @@ arXiv: https://arxiv.org/abs/1709.07604},
   title     = {Narrative structure of A Song of Ice and Fire creates a fictional world with realistic measures of social complexity},
   journal   = {Proceedings of the National Academy of Sciences},
   year      = {2020},
-  volume    = {in press},
-  pages     = {202006465},
+  volume    = {117},
+  number    = {46},
+  pages     = {28582-28588},
   doi       = {10.1073/pnas.2006465117},
   owner     = {Vincent},
   timestamp = {2020.11.07},
@@ -20025,6 +20086,21 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url         = {https://academiccommons.columbia.edu/doi/10.7916/D87P99M9},
 }
 
+@InProceedings{Gupta2015,
+  author    = {Gupta, S. and Yan, X. and Lerman, K.},
+  title     = {Structural Properties of Ego Networks},
+  booktitle = {International Conference on Social Computing, Behavioral-Cultural Modeling, and Prediction},
+  year      = {2015},
+  volume    = {9021},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {55-64},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-319-16268-3_6},
+  groups    = {_General (EgoNets)},
+  owner     = {Vincent},
+  timestamp = {2023.03.18},
+}
+
 @Article{Gupta2016,
   author    = {Gupta, N. and Singh, A. and Cherifi, H.},
   title     = {Centrality Measures for Networks with Community Structure},
@@ -20611,7 +20687,8 @@ arXiv: https://arxiv.org/abs/1709.07604},
   title     = {{QuickLook}: Movie Summarization using Scene-based Leading Characters with Psychological Cues Fusion},
   journal   = {Information Fusion},
   year      = {2021},
-  volume    = {in press},
+  volume    = {79},
+  pages     = {24-35},
   doi       = {10.1016/j.inffus.2021.04.016},
   owner     = {Vincent},
   timestamp = {2021.05.01},
@@ -22229,6 +22306,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.06},
 }
 
+@Book{Holme2019b,
+  title     = {Temporal Network Theory},
+  publisher = {Springer},
+  year      = {2019},
+  author    = {Holme, P. and Saramäki, J.},
+  series    = {Computational Social Sciences},
+  doi       = {10.1007/978-3-030-23495-9},
+  owner     = {Vincent},
+  timestamp = {2019.11.03},
+}
+
 @Article{Holmes1994,
   author    = {Holmes, D. I.},
   title     = {Authorship attribution},
@@ -23387,6 +23475,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.omega.2020.102370},
   owner     = {Vincent},
   timestamp = {2021.06.23},
+}
+
+@Article{Ito2005,
+  author    = {Ito, K.},
+  title     = {A History of Manga in the Context of Japanese Culture and Society},
+  journal   = {Journal of Popular Culture},
+  year      = {2005},
+  volume    = {38},
+  number    = {3},
+  pages     = {456-475},
+  doi       = {10.1111/j.0022-3840.2005.00123.x},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
 }
 
 @Electronic{Iuhfd2018,
@@ -24579,8 +24680,10 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Joubert, E.},
   title     = {`Distant Reading' in French Music Criticism},
   journal   = {Nineteenth-Century Music Review},
-  year      = {2021},
-  volume    = {in press},
+  year      = {2022},
+  volume    = {19},
+  number    = {2},
+  pages     = {291-315},
   doi       = {10.1017/s1479409820000476},
   owner     = {Vincent},
   timestamp = {2021.03.27},
@@ -25598,6 +25701,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.12},
 }
 
+@Article{Kermack1927,
+  author    = {Kermack, W. O. and McKendrick, A. G.},
+  title     = {A contribution to the mathematical theory of epidemics},
+  journal   = {Proceedings of the Royal Society of London. Series A},
+  year      = {1927},
+  volume    = {115},
+  number    = {772},
+  pages     = {700-721},
+  doi       = {10.1098/rspa.1927.0118},
+  owner     = {Vincent},
+  timestamp = {2023.03.18},
+}
+
 @Article{Kernighan1970,
   author    = {Kernighan, B. W. and Lin, S.},
   title     = {An efficient heuristic procedure for partitioning graphs},
@@ -25721,7 +25837,9 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   title     = {A Comparative Study for Unsupervised Network Representation Learning},
   journal   = {IEEE Transactions on Knowledge and Data Engineering},
   year      = {2019},
-  volume    = {in press},
+  volume    = {33},
+  number    = {5},
+  pages     = {1807-1818},
   doi       = {10.1109/tkde.2019.2951398},
   owner     = {Vincent},
   timestamp = {2020.07.19},
@@ -27423,7 +27541,9 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   title     = {Quantitative analysis of character networks in Polish 19th- and 20th-century novels},
   journal   = {Digital Scholarship in the Humanities},
   year      = {2021},
-  volume    = {in press},
+  volume    = {36},
+  number    = {Supplement\_2},
+  pages     = {ii175–ii181},
   doi       = {10.1093/llc/fqab012},
   owner     = {Vincent},
   timestamp = {2021.03.27},
@@ -27556,10 +27676,11 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   title     = {Dynamic Character Graph via Online Face Clustering for Movie Analysis},
   journal   = {Multimedia Tools and Applications},
   year      = {2020},
-  volume    = {in press},
+  volume    = {79},
+  pages     = {33103–33118},
+  doi       = {10.1007/s11042-020-09449-6},
   owner     = {Vincent},
   timestamp = {2020.08.04},
-  url       = {https://arxiv.org/abs/2007.14913},
 }
 
 @InProceedings{Kumar2006,
@@ -27638,8 +27759,9 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Kumar, A. and Kaur, A. and Kumar, M.},
   title     = {Face detection techniques: a review},
   journal   = {Artificial Intelligence Review},
-  year      = {2018},
-  volume    = {in press},
+  year      = {2019},
+  volume    = {52},
+  pages     = {927–948},
   doi       = {10.1007/s10462-018-9650-2},
   owner     = {Vincent},
   timestamp = {2019.04.18},
@@ -33138,6 +33260,28 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.03},
 }
 
+@Article{Masuda2013,
+  author    = {Masuda, N. and Holme, P.},
+  title     = {Predicting and controlling infectious disease epidemics using temporal networks},
+  journal   = {F1000Prime Reports},
+  year      = {2013},
+  volume    = {5},
+  pages     = {6},
+  doi       = {10.12703/p5-6},
+  owner     = {Vincent},
+  timestamp = {2023.03.18},
+}
+
+@Book{Masuda2016,
+  title     = {A Guide to Temporal Networks},
+  publisher = {World Scientific},
+  year      = {2016},
+  author    = {Masuda, N. and Lambiotte, R.},
+  doi       = {10.1142/9781786341150},
+  owner     = {Vincent},
+  timestamp = {2016.11.15},
+}
+
 @Article{Matamoros-Fernandez2017,
   author    = {Matamoros-Fernández, A.},
   title     = {Platformed racism: the mediation and circulation of an Australian race-based controversy on Twitter, Facebook and {YouTube}},
@@ -33759,8 +33903,10 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {McKenzie, J.},
   title     = {The economics of movies (revisited): A survey of recent literature},
   journal   = {Journal of Economic Surveys},
-  year      = {2022},
-  volume    = {in press},
+  year      = {2023},
+  volume    = {37},
+  number    = {2},
+  pages     = {480-525},
   doi       = {10.1111/joes.12498},
   owner     = {Vincent},
   timestamp = {2022.08.31},
@@ -39868,7 +40014,9 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   title     = {The metrics and poetics of historical drama: The dramatis personae of a premodern revolt in early nineteenth-century Finland},
   journal   = {Orbis Litterarum},
   year      = {2019},
-  volume    = {in press},
+  volume    = {74},
+  number    = {5},
+  pages     = {311-339},
   doi       = {10.1111/oli.12238},
   owner     = {Vincent},
   timestamp = {2019.08.18},
@@ -40632,6 +40780,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {https://www.jstor.org/stable/10.5749/j.ctttv14w},
+}
+
+@InCollection{Prough2010,
+  author    = {Prough, J.},
+  title     = {Shojo manga in {Japan} and abroad},
+  booktitle = {Manga: An anthology of global and cultural perspectives},
+  publisher = {Bloomsbury},
+  year      = {2010},
+  pages     = {93-106},
+  owner     = {Vincent},
+  timestamp = {2023.03.18},
+  url       = {https://www.bloomsbury.com/uk/manga-9780826429384/},
 }
 
 @Book{Pruitt2003,
@@ -41478,6 +41638,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner       = {Vincent},
   timestamp   = {2010.06.03},
   url         = {http://www.R-project.org},
+}
+
+@Article{Read1954,
+  author    = {Read, K. E.},
+  title     = {Cultures of the central highlands, New Guinea},
+  journal   = {Southwestern Journal of Anthropology},
+  year      = {1954},
+  volume    = {10},
+  number    = {1},
+  pages     = {1-43},
+  doi       = {10.1086/soutjanth.10.1.3629074},
+  owner     = {Vincent},
+  timestamp = {2016.01.06},
 }
 
 @Article{Reagan2016,
@@ -44899,6 +45072,16 @@ arXiv: http://arxiv.org/abs/1410.3560},
   timestamp    = {2018.11.11},
 }
 
+@Book{Schodt2013,
+  title     = {Dreamland Japan: Writings on Modern Manga},
+  publisher = {Stone Bridge Press},
+  year      = {2013},
+  author    = {Schodt, F. L.},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+  url       = {https://www.asianstudies.org/publications/eaa/archives/dreamland-japan-writings-on-modern-manga/},
+}
+
 @Article{Schoech2017,
   author    = {Schöch, C.},
   title     = {Topic modeling genre: An exploration of French classical and enlightenment drama},
@@ -44927,11 +45110,12 @@ arXiv: http://arxiv.org/abs/1410.3560},
   title     = {Creating the European Literary Text Collection (ELTeC): Challenges and Perspectives},
   journal   = {Modern Languages Open},
   year      = {2021},
-  volume    = {in press},
+  volume    = {1},
+  pages     = {25},
+  doi       = {10.3828/mlo.v0i0.364},
   groups    = {Literature},
   owner     = {Vincent},
   timestamp = {2021.05.15},
-  url       = {https://www.linguateca.pt/Diana/download/Schochetal2021.pdf},
 }
 
 @Article{Schoff1962,
@@ -46265,8 +46449,9 @@ arXiv: http://arxiv.org/abs/1410.3560},
   author    = {Šiljak, H.},
   title     = {Networks of {Twin Peaks}: the {Dale Cooper} Effect},
   journal   = {Mathematical Intelligencer},
-  year      = {2022},
-  volume    = {in press},
+  year      = {2023},
+  volume    = {45},
+  pages     = {31-37},
   doi       = {10.1007/s00283-022-10187-w},
   owner     = {Vincent},
   timestamp = {2021.08.28},
@@ -47106,6 +47291,19 @@ arXiv: http://arxiv.org/abs/1410.3560},
   doi       = {10.1109/ism.2008.14},
   owner     = {Vincent},
   timestamp = {2019.03.27},
+}
+
+@Article{Soleymani2016,
+  author    = {Soleymani, M. and Asghari-Esfeden, S. and Fu, Y. and Pantic, M.},
+  title     = {Analysis of {EEG} Signals and Facial Expressions for Continuous Emotion Detection},
+  journal   = {IEEE Transactions on Affective Computing},
+  year      = {2016},
+  volume    = {7},
+  number    = {1},
+  pages     = {17-28},
+  doi       = {10.1109/taffc.2015.2436926},
+  owner     = {Vincent},
+  timestamp = {2023.03.18},
 }
 
 @Article{Solomonoff1951,
@@ -48645,6 +48843,19 @@ arXiv: http://arxiv.org/abs/1410.3560},
   url       = {https://www.worldcat.org/title/psychology-of-intergroup-relations/oclc/11784490},
 }
 
+@InCollection{Takahashi2014,
+  author    = {Takahashi, M.},
+  title     = {Opening the Closed World of Shojo Manga},
+  booktitle = {Japanese Visual Culture: Explorations in the World of Manga and Anime},
+  publisher = {Routledge},
+  year      = {2014},
+  chapter   = {5},
+  pages     = {114-136},
+  owner     = {Vincent},
+  timestamp = {2023.03.18},
+  url       = {https://www.routledge.com/Japanese-Visual-Culture-Explorations-in-the-World-of-Manga-and-Anime/MacWilliams/p/book/9780765616029},
+}
+
 @InProceedings{Takayama2012,
   author    = {Takayama, K. and Johan, H. and Nishita, T.},
   title     = {Face Detection and Face Recognition of Cartoon Characters Using Feature Extraction},
@@ -48749,7 +48960,7 @@ arXiv: http://arxiv.org/abs/1410.3560},
   year      = {2014},
   volume    = {1588},
   series    = {AIP Conference Proceedings},
-  pages     = {246},
+  pages     = {246-251},
   doi       = {10.1063/1.4866954},
   owner     = {Vincent},
   timestamp = {2017.12.07},
@@ -49314,8 +49525,9 @@ arXiv: http://arxiv.org/abs/1410.3560},
   author    = {Teng, Y. and Song, C. and Wu, B.},
   title     = {Toward jointly understanding social relationships and characters from videos},
   journal   = {Applied Intelligence},
-  year      = {2021},
-  volume    = {in press},
+  year      = {2022},
+  volume    = {52},
+  pages     = {5633-5645},
   doi       = {10.1007/s10489-021-02738-z},
   owner     = {Vincent},
   timestamp = {2021.08.19},
@@ -49796,6 +50008,18 @@ arXiv: http://arxiv.org/abs/1410.3560},
   doi       = {10.1016/j.physa.2006.03.050},
   owner     = {Vincent},
   timestamp = {2021.03.06},
+}
+
+@Article{Toku2007,
+  author    = {Toku, M.},
+  title     = {Shojo Manga! Girls' Comics! A Mirror of Girls' Dreams},
+  journal   = {Mechademia},
+  year      = {2007},
+  volume    = {2},
+  pages     = {19-32},
+  doi       = {10.1353/mec.0.0013},
+  owner     = {Vincent},
+  timestamp = {2023.03.18},
 }
 
 @Book{Tolmie2013,
@@ -51959,6 +52183,30 @@ arXiv: http://arxiv.org/abs/1410.3560},
   url       = {http://jasss.soc.surrey.ac.uk/6/3/2.html},
 }
 
+@Article{Wang2005,
+  author    = {Wang, W.-X. and Hu, B. and Zhou, T. and Wang , B.-H. and Xie, Y.-B.},
+  title     = {Mutual selection model for weighted networks},
+  journal   = {Physical Review E},
+  year      = {2005},
+  volume    = {72},
+  number    = {4},
+  doi       = {10.1103/physreve.72.046140},
+  owner     = {Vincent},
+  timestamp = {2023.03.18},
+}
+
+@Article{Wang2006,
+  author    = {Wang, F. and Moreno, Y. and Sun, Y.},
+  title     = {Structure of peer-to-peer social networks},
+  journal   = {Physical Review E},
+  year      = {2006},
+  volume    = {73},
+  number    = {3},
+  doi       = {10.1103/physreve.73.036123},
+  owner     = {Vincent},
+  timestamp = {2023.03.18},
+}
+
 @InProceedings{Wang2007,
   author    = {Wang, C.-W. and Cheng, W.-H. and Chen, J.-C. and Yang, S.-S. and Wu, J.-L.},
   title     = {Film Narrative Exploration Through the Analysis of Aesthetic Elements},
@@ -52964,6 +53212,19 @@ arXiv: http://arxiv.org/abs/1410.3560},
   owner     = {Vincent},
   timestamp = {2020.01.04},
   url       = {https://arxiv.org/abs/1511.08198},
+}
+
+@Article{Wijk2010,
+  author    = {van Wijk, Bernadette C. M. and Stam, Cornelis J. and Daffertshofer, Andreas},
+  title     = {Comparing Brain Networks of Different Size and Connectivity Density Using Graph Theory},
+  journal   = {PLoS ONE},
+  year      = {2010},
+  volume    = {5},
+  number    = {10},
+  pages     = {e13701},
+  doi       = {10.1371/journal.pone.0013701},
+  owner     = {Vincent},
+  timestamp = {2023.03.18},
 }
 
 @Article{Wilde2019,
@@ -54298,9 +54559,10 @@ arXiv: http://arxiv.org/abs/1410.3560},
   author    = {Yang, Y. and Song, Y.},
   title     = {Exploring the similarity between Han's and non-Han's Yuan poetry: Resistance distance metrics over character co-occurrence networks},
   journal   = {Digital Scholarship in the Humanities},
-  year      = {2021},
-  volume    = {in press},
-  pages     = {fqab082},
+  year      = {2022},
+  volume    = {37},
+  number    = {3},
+  pages     = {880-893},
   doi       = {10.1093/llc/fqab082},
   owner     = {Vincent},
   timestamp = {2021.10.26},
@@ -54559,7 +54821,8 @@ arXiv: http://arxiv.org/abs/1410.3560},
   title     = {Dialogue analysis: a case study on the New Testament},
   journal   = {Language Resources and Evaluation},
   year      = {2019},
-  volume    = {in press},
+  volume    = {53},
+  pages     = {603–623},
   doi       = {10.1007/s10579-019-09461-9},
   owner     = {Vincent},
   timestamp = {2019.05.08},
@@ -55639,8 +55902,10 @@ arXiv: http://arxiv.org/abs/1410.3560},
   author    = {Zhao, Y. and Shi, J. and Liu, J. and Zhao, J. and Zhou, F. and Zhang, W. and Chen, K. and Zhao, X. and Zhu, C. and Chen, W.},
   title     = {Evaluating Effects of Background Stories on Graph Perception},
   journal   = {IEEE Transactions on Visualization and Computer Graphics},
-  year      = {2021},
-  volume    = {in press},
+  year      = {2022},
+  volume    = {28},
+  number    = {12},
+  pages     = {4839-4854},
   doi       = {10.1109/tvcg.2021.3107297},
   owner     = {Vincent},
   timestamp = {2021.08.30},
